Fix numbers color, fix select input field design on safari, remove scroll from application, make status bar transparent

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -3,5 +3,5 @@ $dark: #000000;
 $green-status: #3AD551;
 $red-status: #db3030;
 $yellow-status: #FFBB3E;
-$silver: #D5D5D5CC;
+$silver: #D5D5D5FF;
 $blue: #0A7FDC;
