--- a/src/assets/styles/login.scss
+++ b/src/assets/styles/login.scss
@@ -31,4 +31,6 @@
   border: none;
   outline: none;
   font-size: 14px;
+  color: $dark;
+  background-color: $light;
 }
